--- a/_posts/2022-02-24-leetcode_分组刷题_算法.md
+++ b/_posts/2022-02-24-leetcode_分组刷题_算法.md
@@ -782,7 +782,7 @@ class Solution:
 #### 75.颜色分类
 [https://leetcode-cn.com/problems/sort-colors](https://leetcode-cn.com/problems/sort-colors) 
 ##### 原题
-给定一个包含红色、白色和蓝色、共 `n` 个元素的数组<meta charset="UTF-8" /> `nums` ， **<a href="https://baike.baidu.com/item/%E5%8E%9F%E5%9C%B0%E7%AE%97%E6%B3%95" target="_blank">原地</a>** 对它们进行排序，使得相同颜色的元素相邻，并按照红色、白色、蓝色顺序排列。
+给定一个包含红色、白色和蓝色、共 `n` 个元素的数组 `nums` ， **<a href="https://baike.baidu.com/item/%E5%8E%9F%E5%9C%B0%E7%AE%97%E6%B3%95" target="_blank">原地</a>** 对它们进行排序，使得相同颜色的元素相邻，并按照红色、白色、蓝色顺序排列。
 
 我们使用整数 `0` 、 `1` 和 `2` 分别表示红色、白色和蓝色。
 必须在不使用库的sort函数的情况下解决这个问题。
@@ -1629,7 +1629,57 @@ class Solution:
         return cur
 ```
 >
+#### [72\. 编辑距离](https://leetcode-cn.com/problems/edit-distance/)
+
+
+给你两个单词 `word1` 和 `word2`， _请返回将 `word1` 转换成 `word2` 所使用的最少操作数_  。
+
+你可以对一个单词进行如下三种操作：
+
+*   插入一个字符
+*   删除一个字符
+*   替换一个字符
+
+**示例 1：**
+
+```
+输入：word1 = "horse", word2 = "ros"
+输出：3
+解释：
+horse -> rorse (将 'h' 替换为 'r')
+rorse -> rose (删除 'r')
+rose -> ros (删除 'e')
+```
+
+**示例 2：**
+
+```
+输入：word1 = "intention", word2 = "execution"
+输出：5
+解释：
+intention -> inention (删除 't')
+inention -> enention (将 'i' 替换为 'e')
+enention -> exention (将 'n' 替换为 'x')
+exention -> exection (将 'n' 替换为 'c')
+exection -> execution (插入 'u')
+```
+
+**提示：**
+
+*   `0 <= word1.length, word2.length <= 500`
+*   `word1` 和 `word2` 由小写英文字母组成
+
+
+##### Solution
+
+```python
+
+```
+
+>   
+
 #### 120.三角形最小路径和
+
 [https://leetcode-cn.com/problems/triangle](https://leetcode-cn.com/problems/triangle) 
 ##### 原题
 给定一个三角形 `triangle` ，找出自顶向下的最小路径和。
@@ -2851,6 +2901,9 @@ class Solution:
 ```
 >
 ## 4贪心
+
+https://leetcode-cn.com/tag/greedy/problemset/
+
 #### 122.买卖股票的最佳时机-ii
 [https://leetcode-cn.com/problems/best-time-to-buy-and-sell-stock-ii](https://leetcode-cn.com/problems/best-time-to-buy-and-sell-stock-ii) 
 ##### 原题
@@ -2966,33 +3019,24 @@ class Solution:
 
 ##### solution
 ```python
-#
-# @lc app=leetcode.cn id=17 lang=python3
-#
-# [17] 电话号码的字母组合
-#
 class Solution:
     def letterCombinations(self, digits: str) -> List[str]:
+        num2digit = {'2': "abc", '3': "def", '4': "ghi",
+                    '5': "jkl", '6': "mno", '7': "pqrs",
+                    '8': "tuv", '9': "wxyz"}
+        def dfs(path, start):
+            if start == len(digits):
+                res.append("".join(path))
+                return
+            if start < len(digits):
+                for c in num2digit[digits[start]]:
+                    dfs(path + [c], start + 1)
+        
+        res = []
         if not digits:
-            return []
-        self.res = []
-        n = len(digits)
-        d = {'2':['a','b','c'],
-            '3':['d','e','f'],
-            '4':['g','h','i'],
-            '5':['j','k','l'],
-            '6':['m','n','o'],
-            '7':['p','q','r','s'],
-            '8':['t','u','v'],
-            '9':['w','x','y','z']}
-        def dfs(digits, path):
-            if len(digits) == 0:
-                self.res.append(path)
-            else:
-                for c in d[digits[0]]:
-                    dfs(digits[1:], path+c)
-        dfs(digits, '')
-        return self.res
+            return res
+        dfs([], 0)
+        return res
 ```
 >
 #### 22.括号生成
@@ -3029,26 +3073,20 @@ class Solution:
 
 ##### solution
 ```python
-#
-# @lc app=leetcode.cn id=22 lang=python3
-#
-# [22] 括号生成
-#
 class Solution:
-    def generateParenthesis(self, n):
-        self.res = []
-        def dfs(left, path, n):
-            if len(path) == 2*n:
-                if left == 0:
-                    self.res.append(path)
+    def generateParenthesis(self, n: int) -> List[str]:
+        def dfs(path, left, right):
+            if len(path) == n * 2:
+                res.append("".join(path))
                 return
             if left < n:
-                dfs(left+1, path+'(', n)
-            if left > 0:
-                dfs(left-1, path+')', n)
-        dfs(0, '', n)
-        return self.res
-# print(Solution().generateParenthesis(3))
+                dfs(path + ["("], left + 1, right)
+            if right < left:
+                dfs(path + [")"], left, right + 1)
+        
+        res = []
+        dfs([], 0, 0)
+        return res
 ```
 >
 #### 46.全排列
@@ -3095,39 +3133,25 @@ class Solution:
 
 ##### solution
 ```python
-#
-# @lc app=leetcode.cn id=46 lang=python3
-#
-# [46] 全排列
-#
 class Solution:
-    # 基于回溯算法98.84%
     def permute(self, nums: List[int]) -> List[List[int]]:
-        self.res = []
-        L = len(nums)
-        def dfs(nums, path, visited):
-            if len(path) == L:
-                self.res.append(path)
+        def dfs(path, visited):
+            n = len(nums)
+            if len(path) == n:
+                res.append(path[:])
                 return
-            for n in nums:
-                if n not in visited:
-                    visited.add(n)
-                    dfs(nums, path+[n], visited)
-                    visited.remove(n)
-        dfs(nums, [], set())
-        return self.res
-    # 14.59%
-    # def permute(self, nums: List[int]) -> List[List[int]]:
-    #     if not nums:
-    #         return []
-    #     if len(nums) == 1:
-    #         return [nums]
-    #     res = []
-    #     for i, n in enumerate(nums):
-    #         rest = nums[:i] + nums[i+1:]
-    #         for a in self.permute(rest):
-    #             res.append([n] + a)
-    #     return res
+            if len(path) > n:
+                return
+            for i in range(n):
+                if i not in visited:
+                    visited.add(i)
+                    dfs(path + [nums[i]], visited)
+                    visited.remove(i)
+        
+        res = []
+        visited = set()
+        dfs([], visited)
+        return res
 ```
 >
 #### 47.全排列-ii
@@ -3168,32 +3192,29 @@ class Solution:
 
 ##### solution
 ```python
-#
-# @lc app=leetcode.cn id=47 lang=python3
-#
-# [47] 全排列 II
-#
 class Solution:
-    def permuteUnique(self, nums):
-        self.res = []
-        nums.sort()
-        L = len(nums)
-        def dfs(nums, path, visited):
-            if len(path) == L:
-                self.res.append(path)
+    def permuteUnique(self, nums: List[int]) -> List[List[int]]:
+        def dfs(path, visited):
+            n = len(nums)
+            if len(path) == n:
+                res.append(path[:])
                 return
-            for i, n in enumerate(nums):
+            if len(path) > n:
+                return
+            for i in range(n):
                 if i in visited:
                     continue
-                # [1,2,2,3]保证第一个1和第二个1加进visited的先后顺序
-                if i > 0 and nums[i-1] == n and i-1 not in visited:
+                if i > 0 and nums[i] == nums[i - 1] and i - 1 not in visited:
                     continue
                 visited.add(i)
-                dfs(nums, path+[n], visited)
+                dfs(path + [nums[i]], visited)
                 visited.remove(i)
-        dfs(nums, [], set())
-        return self.res
-# print(Solution().permuteUnique([1,1,2]))
+        
+        res = []
+        visited = set()
+        nums.sort()
+        dfs([], visited)
+        return res
 ```
 >
 #### 78.子集
@@ -3234,39 +3255,17 @@ class Solution:
 
 ##### solution
 ```python
-#
-# @lc app=leetcode.cn id=78 lang=python3
-#
-# [78] 子集
-#
 class Solution:
-    # 回溯标准写法
     def subsets(self, nums: List[int]) -> List[List[int]]:
-        self.ans = []
-        def backtrack(nums, index, path):
-            if index == len(nums):
-                self.ans.append(path)
-                return
-            backtrack(nums, index+1, path)
-            backtrack(nums, index+1, path+[nums[index]])
-        backtrack(nums, 0, [])
-        return self.ans
-    # dfs
-    # def subsets(self, nums: List[int]) -> List[List[int]]:
-    #     self.ans = []
-    #     def dfs(nums, index, path):
-    #         self.ans.append(path)
-    #         for i in range(index, len(nums)):
-    #             dfs(nums, i+1, path+[nums[i]])
-    #     dfs(nums, 0, [])
-    #     return self.ans
-    # 一种巧妙的方法
-    # def subsets(self, nums):
-    #     res = [[]]
-    #     for i in range(len(nums)):
-    #         for subres in res[:]:
-    #             res.append(subres+[nums[i]])
-    #     return res
+        def dfs(path, start):
+            res.append(path)
+            n = len(nums)
+            for i in range(start, n):
+                dfs(path + [nums[i]], i + 1)
+
+        res = []
+        dfs([], 0)
+        return res
 ```
 >
 #### 89.格雷编码
@@ -3321,16 +3320,13 @@ class Solution:
 
 ##### solution
 ```python
-#
-# @lc app=leetcode.cn id=89 lang=python3
-#
-# [89] 格雷编码
-#
 class Solution:
     def grayCode(self, n: int) -> List[int]:
-        res, head = [0], 1
+        res = [0]
+        head = 1
         for _ in range(n):
-            for j in range(len(res)-1, -1, -1):
+            k = len(res)
+            for j in range(k-1, -1, -1):
                 res.append(head + res[j])
             head <<= 1
         return res
@@ -3372,38 +3368,29 @@ class Solution:
 
 ##### solution
 ```python
-#
-# @lc app=leetcode.cn id=90 lang=python3
-#
-# [90] 子集 II
-#
 class Solution:
-    # 89.84%
     def subsetsWithDup(self, nums: List[int]) -> List[List[int]]:
+        def dfs(path, start, visited):
+            res.append(path)
+            n = len(nums)
+            for i in range(start, n):
+                if i > 0 and nums[i] == nums[i-1] and i-1 not in visited:
+                    continue
+                visited.add(i)
+                dfs(path + [nums[i]], i + 1, visited)
+                visited.remove(i)
+
+        res = []
+        visited = set()
         nums.sort()
-        res = [[]]
-        temp_size = 0
-        for i in range(len(nums)):
-            start = temp_size if i >= 1 and nums[i] == nums[i-1] else 0
-            temp_size = len(res)
-            for j in range(start, temp_size):
-                res.append(res[j]+[nums[i]])
+        dfs([], 0, visited)
         return res
-    # 回溯去重 24%
-    # def subsetsWithDup(self, nums: List[int]) -> List[List[int]]:
-    #     self.ans = []
-    #     def backtrack(nums, index, path):
-    #         if index == len(nums):
-    #             if sorted(path) not in self.ans:
-    #                 self.ans.append(sorted(path))
-    #             return
-    #         backtrack(nums, index+1, path)
-    #         backtrack(nums, index+1, path+[nums[index]])
-    #     backtrack(nums, 0, [])
-    #     return self.ans
 ```
 >
+
+
 #### 306.累加数
+
 [https://leetcode-cn.com/problems/additive-number](https://leetcode-cn.com/problems/additive-number) 
 ##### 原题
  **累加数** 是一个字符串，组成它的数字可以形成累加序列。
@@ -3442,18 +3429,41 @@ class Solution:
 
  **进阶：** 你计划如何处理由过大的整数输入导致的溢出?
 
-
 **标签**
 `字符串` `回溯` 
 
+##### solution1 dfs标准写法
 
-##### solution
 ```python
-#
-# @lc app=leetcode.cn id=306 lang=python3
-#
-# [306] 累加数
-#
+class Solution:
+    def isAdditiveNumber(self, num: str) -> bool:
+        def dfs(start, pre, cur):
+            new = pre + cur
+            k = len(str(new))
+            if k > n - start:
+                return False
+            if num[start: start + k] == str(new):
+                if start + k == n:
+                    return True
+                return dfs(start + k, cur, new)
+            return False
+            
+        n = len(num)
+        for l1 in range(1, n // 2 + 1):
+            if num[0] == "0" and l1 > 1:
+                break
+            for l2 in range(1, (n - l1) // 2 + 1):
+                if num[l1] == "0" and l2 > 1:
+                    break
+                pre, cur = int(num[:l1]), int(num[l1:l1 + l2])
+                if dfs(l1 + l2, pre, cur):
+                    return True
+        return False
+```
+
+##### solution2 迭代
+
+```python
 class Solution:
     def isAdditiveNumber(self, num: str) -> bool:
         n = len(num)
@@ -3478,8 +3488,225 @@ class Solution:
         return False
 ```
 >
-#### 842.将数组拆分成斐波那契序列
+#### [463\. 岛屿的周长](https://leetcode-cn.com/problems/island-perimeter/)
+
+
+给定一个 `row x col` 的二维网格地图 `grid` ，其中：`grid[i][j] = 1` 表示陆地， `grid[i][j] = 0` 表示水域。
+
+网格中的格子 **水平和垂直** 方向相连（对角线方向不相连）。整个网格被水完全包围，但其中恰好有一个岛屿（或者说，一个或多个表示陆地的格子相连组成的岛屿）。
+
+岛屿中没有“湖”（“湖” 指水域在岛屿内部且不和岛屿周围的水相连）。格子是边长为 1 的正方形。网格为长方形，且宽度和高度均不超过 100 。计算这个岛屿的周长。
+
+**示例 1：**
+
+![](https://tva1.sinaimg.cn/large/e6c9d24egy1h1hbxj2xhbj206505x74b.jpg)
+
+```
+输入：grid = [[0,1,0,0],[1,1,1,0],[0,1,0,0],[1,1,0,0]]
+输出：16
+解释：它的周长是上面图片中的 16 个黄色的边
+```
+
+**示例 2：**
+
+```
+输入：grid = [[1]]
+输出：4
+```
+
+**示例 3：**
+
+```
+输入：grid = [[1,0]]
+输出：4
+```
+
+**提示：**
+
+*   `row == grid.length`
+*   `col == grid[i].length`
+*   `1 <= row, col <= 100`
+*   `grid[i][j]` 为 `0` 或 `1`
+
+##### Solution
+
+-   遍历每个陆地，遍历陆地周围四个点
+    -   如果是陆地，则不计入周长
+    -   如果是水或者边界，则计入周长
+
+```python
+class Solution:
+    def islandPerimeter(self, grid: List[List[int]]) -> int:
+        res = 0
+        m, n = len(grid), len(grid[0])
+        for i in range(m):
+            for j in range(n):
+                if grid[i][j] == 1:
+                    for di, dj in [(-1,0), (1,0), (0,1), (0,-1)]:
+                        x, y = i + di, j + dj
+                        if x < 0 or x >= m or y < 0 or y >= n:
+                            res += 1
+                        elif grid[x][y] == 0:
+                            res += 1
+        return res
+```
+
+#### [695\. 岛屿的最大面积](https://leetcode-cn.com/problems/max-area-of-island/)
+
+
+给你一个大小为 `m x n` 的二进制矩阵 `grid` 。
+
+**岛屿** 是由一些相邻的 `1` (代表土地) 构成的组合，这里的「相邻」要求两个 `1` 必须在 **水平或者竖直的四个方向上** 相邻。你可以假设 `grid` 的四个边缘都被 `0`（代表水）包围着。
+
+岛屿的面积是岛上值为 `1` 的单元格的数目。
+
+计算并返回 `grid` 中最大的岛屿面积。如果没有岛屿，则返回面积为 `0` 。
+
+**示例 1：**
+
+![](https://tva1.sinaimg.cn/large/e6c9d24egy1h1hbxuywquj20t90i5wh7.jpg)
+
+```
+输入：grid = [[0,0,1,0,0,0,0,1,0,0,0,0,0],[0,0,0,0,0,0,0,1,1,1,0,0,0],[0,1,1,0,1,0,0,0,0,0,0,0,0],[0,1,0,0,1,1,0,0,1,0,1,0,0],[0,1,0,0,1,1,0,0,1,1,1,0,0],[0,0,0,0,0,0,0,0,0,0,1,0,0],[0,0,0,0,0,0,0,1,1,1,0,0,0],[0,0,0,0,0,0,0,1,1,0,0,0,0]]
+输出：6
+解释：答案不应该是 11 ，因为岛屿只能包含水平或垂直这四个方向上的 1 。
+```
+
+**示例 2：**
+
+```
+输入：grid = [[0,0,0,0,0,0,0,0]]
+输出：0
+```
+
+**提示：**
+
+*   `m == grid.length`
+*   `n == grid[i].length`
+*   `1 <= m, n <= 50`
+*   `grid[i][j]` 为 `0` 或 `1`
+
+##### Solution
+
+-   使用visited数组保证每个点只被访问一次
+
+```python
+class Solution:
+    def maxAreaOfIsland(self, grid: List[List[int]]) -> int:
+        def dfs(i, j):
+            res = 1
+            for di, dj in [(-1,0), (1,0), (0,1), (0,-1)]:
+                x, y = i + di, j + dj
+                if x < 0 or x >= m or y < 0 or y >= n:
+                    continue
+                if grid[x][y] == 1 and not visited[x][y]:
+                    visited[x][y] = True
+                    res += dfs(x, y)
+            return res
+
+        res = 0
+        m, n = len(grid), len(grid[0])
+        visited = [[False] * n for _ in range(m)]
+        for i in range(m):
+            for j in range(n):
+                if grid[i][j] == 1 and not visited[i][j]:
+                    visited[i][j] = True
+                    res = max(res, dfs(i, j))
+        return res
+```
+
+#### [827\. 最大人工岛](https://leetcode-cn.com/problems/making-a-large-island/)
+
+
+给你一个大小为 `n x n` 二进制矩阵 `grid` 。**最多** 只能将一格 `0` 变成 `1` 。
+
+返回执行此操作后，`grid` 中最大的岛屿面积是多少？
+
+**岛屿** 由一组上、下、左、右四个方向相连的 `1` 形成。
+
+**示例 1:**
+
+```
+输入: grid = [[1, 0], [0, 1]]
+输出: 3
+解释: 将一格0变成1，最终连通两个小岛得到面积为 3 的岛屿。
+```
+
+**示例 2:**
+
+```
+输入: grid = [[1, 1], [1, 0]]
+输出: 4
+解释: 将一格0变成1，岛屿的面积扩大为 4。
+```
+
+**示例 3:**
+
+```
+输入: grid = [[1, 1], [1, 1]]
+输出: 4
+解释: 没有0可以让我们变成1，面积依然为 4。
+```
+
+**提示：**
+
+*   `n == grid.length`
+*   `n == grid[i].length`
+*   `1 <= n <= 500`
+*   `grid[i][j]` 为 `0` 或 `1`
+
+##### Solution
+
+-   第一次遍历：对每个岛屿编号，并求出其面积
+-   第二次遍历：对所有0遍历，看将这个0变为1，可以合并其周围的几个岛屿，并计算形成的面积
+
+```python
+class Solution:
+    def largestIsland(self, grid: List[List[int]]) -> int:
+        def dfs_index(i, j, index):
+            res = 1
+            for di, dj in [(-1,0), (1,0),(0,1),(0,-1)]:
+                x, y = i + di, j + dj
+                if x < 0 or x >= n or y < 0 or y >= n:
+                    continue
+                if grid[x][y] == 1:
+                    grid[x][y] = index
+                    res += dfs_index(x, y, index)
+            return res
+
+        n = len(grid)
+        index = 2
+        area = {}
+        for i in range(n):
+            for j in range(n):
+                if grid[i][j] == 1:
+                    grid[i][j] = index
+                    area[index] = dfs_index(i, j, index)
+                    index += 1
+
+        # 遍历每个0，检查其(左上，右上，左下，右下)是不是岛屿，是岛屿就可以和这个点合并
+        
+        res = max(area.values()) if area else 0
+        for i in range(n):
+            for j in range(n):
+                if grid[i][j] == 0:
+                    cur_set = set()
+                    cur_area = 0
+                    for di, dj in [(-1,0), (1,0),(0,1),(0,-1)]:
+                        x, y = i + di, j + dj
+                        if x < 0 or x >= n or y < 0 or y >= n:
+                            continue
+                        if grid[x][y] != 0 and grid[x][y] not in cur_set:
+                            cur_set.add(grid[x][y])
+                            cur_area += area[grid[x][y]]
+                    res = max(res, 1 + cur_area)
+        return res
+```
+
+#### 842.将数组拆分成斐波那契序列 similar with 306
+
 [https://leetcode-cn.com/problems/split-array-into-fibonacci-sequence](https://leetcode-cn.com/problems/split-array-into-fibonacci-sequence) 
+
 ##### 原题
 给定一个数字字符串 `num` ，比如 `"123456579"` ，我们可以将它分成「斐波那契式」的序列 `[123, 456, 579]` 。
 
@@ -3528,14 +3755,44 @@ class Solution:
 **标签**
 `字符串` `回溯` 
 
+##### solution1 dfs标准写法
 
-##### solution
 ```python
-#
-# @lc app=leetcode.cn id=842 lang=python3
-#
-# [842] 将数组拆分成斐波那契序列
-# https://leetcode-cn.com/problems/split-array-into-fibonacci-sequence/solution/dfshui-su-yong-quan-ju-bian-liang-resji-lu-fu-he-t/
+class Solution:
+    def splitIntoFibonacci(self, num: str) -> List[int]:
+        def dfs(path, pre, cur, start):
+            nonlocal res
+            if start == l:
+                res = path[:]
+                return True
+            next_ = pre + cur
+            if next_ > 2147483647 or next_ < -2147483648:
+                return False
+            next_len = len(str(next_))
+            if int(num[start: start + next_len]) == next_:
+                return dfs(path + [next_], cur, next_, start + next_len)
+            return False
+
+        l = len(num)
+        res = []
+        for pre_len in range(1, l // 2 + 1):
+            if num[0] == "0" and pre_len > 1:
+                break
+            for cur_len in range(1, (l - pre_len) // 2 + 1):
+                if num[pre_len] == "0" and cur_len > 1:
+                    break
+                pre = int(num[: pre_len])
+                cur = int(num[pre_len: pre_len + cur_len])
+                if dfs([pre, cur], pre, cur, pre_len + cur_len):
+                    return res
+        return res
+```
+
+
+
+##### solution2 迭代写法
+
+```python
 class Solution:
     def splitIntoFibonacci(self, S):
         self.res = []
