--- a/_posts/2022-03-01-leetcode_模板.md
+++ b/_posts/2022-03-01-leetcode_模板.md
@@ -235,11 +235,143 @@ def right_bound(nums, target):
 
 ## 排序算法
 
-快速排序
+### 快速排序
 
-归并排序
+```python
+def partition(nums, l, r):
+    p = random.randint(l, r)
+    pv = nums[p]
+    nums[p], nums[r] = nums[r], nums[p]
+    mid = l
+    for i in range(l, r):
+        if nums[i] <= pv:
+            nums[mid], nums[i] = nums[i], nums[mid]
+            mid += 1
+    nums[mid], nums[r] = nums[r], nums[mid]
+    return mid
 
-堆排序
+def quick_sort(nums, left, right):
+    if right <= left:
+        return
+    mid = partition(nums, left, right)
+    quick_sort(nums, left, mid - 1)
+    quick_sort(nums, mid + 1, right)
+```
+
+#### 链表快排
+
+```python
+class ListNode(object):
+    def __init__(self, x):
+        self.val = x
+        self.next = None
+        
+# 大于left->val放到右边，小于left->val放到左边
+def partition(left, right):
+    pv = left.val
+    i, j = left, left.next
+    while j != right:
+        if j.val < pv:
+            i = i.next
+            i.val, j.val = j.val, i.val
+        j = j.next
+    left.val, i.val = i.val, left.val
+    return i
+
+def quick_sort(left, right):
+    if left != right:
+        mid = partition(left, right)
+        quick_sort(left, mid)
+        quick_sort(mid.next, right)
+        
+def create(items):
+    head = ListNode(items[0])
+    p = head
+    for i in items[1:]:
+        p.next = ListNode(i)
+        p = p.next
+    return head
+
+def print_nodes(head):
+    while head:
+        print(head.val, end=' ')
+        head = head.next
+    
+head = create([4,2,5,3,7,9,0,1])
+quick_sort(head, None)
+print_nodes(head)
+```
+
+
+
+### 归并排序
+
+```python
+def merge_sort(nums):
+    if len(nums) <= 1:
+        return
+    mid = len(nums) // 2
+    left = nums[:mid]
+    right = nums[mid:]
+    merge_sort(left)
+    merge_sort(right)
+
+    i, j, k = 0, 0, 0
+    while i < len(left) and j < len(right):
+        if left[i] < right[j]:
+            nums[k] = left[i]
+            i += 1
+        else:
+            nums[k] = right[j]
+            j += 1
+        k += 1
+
+    while i < len(left):
+        nums[k] = left[i]
+        i += 1
+        k += 1
+    while j < len(right):
+        nums[k] = right[j]
+        j += 1
+        k += 1
+```
+
+
+
+### 堆排序
+
+-   https://www.cnblogs.com/chengxiao/p/6129630.html
+-   构造初始大顶堆，从第一个非叶子节点到根节点，将每个节点都调整为左右子节点中最大的
+-   每次对未排序的部分构造最大堆，然后交换最大堆的顶点和最后一个数
+-   heapify过程
+    -   index对应的节点一定比左右节点大，但是需要对调整后的new_index节点进行heapify，使这个节点也满足大顶堆性质
+    -   调整大顶堆从下往上，从左往右调整。
+    -   例如，4,6,8,5,9->4,9,8,5,6；顶点9本身满足比左右子节点大，但是右节点交换过了，需要对这个交换过的子节点heapify
+
+```python
+def heapify(nums, index, heap_size):
+    left_index = 2 * index
+    right_index = 2 * index + 1
+    new_index = index
+    if left_index < heap_size and nums[left_index] > nums[new_index]:
+        new_index = left_index
+    if right_index < heap_size and nums[right_index] > nums[new_index]:
+        new_index = right_index
+    if new_index != index:
+        nums[index], nums[new_index] = nums[new_index], nums[index]
+        heapify(nums, new_index, heap_size)
+    
+
+def heap_sort(nums):
+    n = len(nums)
+    for i in range(n // 2 - 1, -1, -1):
+        heapify(nums, i, n)
+    for i in range(n - 1, -1, -1):
+        nums[0], nums[i] = nums[i], nums[0]
+        heapify(nums, 0, i)
+```
+
+
 
 ## 拓扑排序
 
