--- a/_posts/2022-03-02-leetcode_专项突击_前缀和系列.md
+++ b/_posts/2022-03-02-leetcode_专项突击_前缀和系列.md
@@ -671,21 +671,17 @@ class Solution:
 class Solution:
     def getMaxMatrix(self, matrix: List[List[int]]) -> List[int]:
         m, n = len(matrix), len(matrix[0])
-        pre_sum = []
-        for j in range(n):
-            cur = [0] * (m + 1)
-            for i in range(m):
-                cur[i+1] = cur[i] + matrix[i][j]
-            pre_sum.append(cur)
 
         sum_, res = float('-inf'), None
         for up in range(m):
+            col_pre_sum = [0] * n
             for bottom in range(up, m):
-                cur_list = [p[bottom+1] - p[up] for p in pre_sum]
+                for i in range(n):
+                    col_pre_sum[i] += matrix[bottom][i]
                 left = 0
                 sub_sum = 0
                 for right in range(n):
-                    sub_sum += cur_list[right]
+                    sub_sum += col_pre_sum[right]
                     if sub_sum > sum_:
                         sum_, res = sub_sum, [up, left, bottom, right]
                     if sub_sum < 0:
@@ -739,7 +735,31 @@ class Solution:
 #### Solution
 
 ```python
+class Solution:
+    def numSubmatrixSumTarget(self, matrix: List[List[int]], target: int) -> int:
+        def find_target_in_list(nums, target):
+            n = len(nums)
+            pre_sum = [0] * (n + 1)
+            for i in range(n):
+                pre_sum[i + 1] = pre_sum[i] + nums[i]
+            res = 0
+            d = {0: 1}
+            for i in range(n):
+                if pre_sum[i + 1] - target in d:
+                    res += d[pre_sum[i + 1] - target]
+                d[pre_sum[i + 1]] = d.get(pre_sum[i + 1], 0) + 1
+            return res
 
+
+        m, n = len(matrix), len(matrix[0])
+        res = 0
+        for up in range(m):
+            col_pre_sum = [0] * n
+            for down in range(up, m):
+                for i in range(n):
+                    col_pre_sum[i] += matrix[down][i]
+                res += find_target_in_list(col_pre_sum, target)
+        return res
 ```
 
 
@@ -782,7 +802,41 @@ class Solution:
 #### Solution
 
 ```python
+class Solution:
+    def maxSumSubmatrix(self, matrix: List[List[int]], k: int) -> int:
+        from sortedcontainers import SortedList
+        # 在nums中找到大于等于target的最小值
+        
+        def find_min_bigger_than_target(nums, target):
+            l, r = 0, len(nums) - 1
+            while l < r:
+                mid = l + r >> 1
+                if nums[mid] >= target:
+                    r = mid
+                else:
+                    l = mid + 1
+            return r if nums[r] >= target else len(nums)
 
+        m, n = len(matrix), len(matrix[0])
+        res = float('-inf')
+        for up in range(m):
+            col_pre_sum = [0] * n
+            for down in range(up, m):
+                for i in range(n):
+                    col_pre_sum[i] += matrix[down][i]
+                sub_sorted = SortedList([0])
+                pre_sum = 0
+                for r in range(n):
+                    pre_sum += col_pre_sum[r]
+                    # 为了让pre_sum[r] - pre_sum[l]是<=k中最大的。即在[0, r - 1]区间寻找一个l，使得pre_sum[l]是>=pre_sum[r] - k中最小的
+                    
+                    idx = find_min_bigger_than_target(sub_sorted, pre_sum - k)
+                    # idx = sub_sorted.bisect_left(pre_sum - k)
+                    
+                    if idx != len(sub_sorted):
+                        res = max(res, pre_sum - sub_sorted[idx])
+                    sub_sorted.add(pre_sum)
+        return res
 ```
 
 ### [862\. 和至少为 K 的最短子数组](https://leetcode-cn.com/problems/shortest-subarray-with-sum-at-least-k/)
@@ -823,6 +877,23 @@ class Solution:
 #### Solution
 
 ```python
-
+class Solution:
+    def shortestSubarray(self, nums: List[int], k: int) -> int:
+        n = len(nums)
+        pre_sum = [0] * (n + 1)
+        for i in range(n):
+            pre_sum[i + 1] = pre_sum[i] + nums[i]
+        
+        res = n + 1
+        queue = collections.deque()
+        for i, pi in enumerate(pre_sum):
+            while queue and pi <= pre_sum[queue[-1]]:
+                queue.pop()
+            # pre_sum[i] - pre_sum[queue[0]]表示queue[0] ~ i - 1直接的子数组的和
+            
+            while queue and pi - k >= pre_sum[queue[0]]:
+                res = min(res, i - queue.popleft())
+            queue.append(i)
+        return res if res < n + 1 else -1
 ```
 
