--- a/_posts/2022-03-02-leetcode_专项突击_动态规划.md
+++ b/_posts/2022-03-02-leetcode_专项突击_动态规划.md
@@ -18,22 +18,407 @@ https://leetcode-cn.com/leetbook/read/dynamic-programming-2-plus/xclk9g/
 
 
 
-# 背包系列
+## 最*系列
+
+### [5\. 最长回文子串](https://leetcode-cn.com/problems/longest-palindromic-substring/)
+
+
+给你一个字符串 `s`，找到 `s` 中最长的回文子串。
+
+**示例 1：**
+
+```
+输入：s = "babad"
+输出："bab"
+解释："aba" 同样是符合题意的答案。
+```
+
+**示例 2：**
+
+```
+输入：s = "cbbd"
+输出："bb"
+```
+
+**提示：**
+
+*   `1 <= s.length <= 1000`
+*   `s` 仅由数字和英文字母组成
+
+#### Solution1 dp
+
+```python
+class Solution:
+    def longestPalindrome(self, s: str) -> str:
+        n = len(s)
+        if n < 2:
+            return s
+        dp = [[False] * n for _ in range(n)]
+        # 长度为1的子串是回文串
+        
+        for i in range(n):
+            dp[i][i] = True
+        
+        max_len, start = 1, 0
+        # 遍历子串长度2 ~ n
+        
+        for sub_len in range(2, n + 1):
+            for left in range(n):
+                right = sub_len + left - 1
+                if right >= n:
+                    break
+                if s[left] != s[right]:
+                    dp[left][right] = False
+                else:
+                    # "aba" 和 "aa"的情况(子串长度小于等于3)可以直接由首尾决定
+                    
+                    if sub_len <= 3:
+                        dp[left][right] = True
+                    else:
+                        dp[left][right] = dp[left + 1][right - 1]
+                if dp[left][right] and sub_len > max_len:
+                    max_len, start = sub_len, left
+        return s[start: start + max_len]
+```
+
+#### Solution2 左右扩展
+
+```python
+class Solution:
+    def longestPalindrome(self, s: str) -> str:
+        def expand(l, r):
+            while l > 0 and r < n - 1 and s[l - 1] == s[r + 1]:
+                l -= 1
+                r += 1
+            return l, r
+        
+        n = len(s)
+        left, right = 0, 0
+        for i in range(n):
+            l, r = expand(i, i)
+            if right - left < r - l:
+                left, right = l, r
+            if i == n - 1 or s[i] != s[i + 1]:
+                continue
+            l, r = expand(i, i + 1)
+            if right - left < r - l:
+                left, right = l, r
+        return s[left: right + 1]
+```
+
+### [53\. 最大子数组和](https://leetcode-cn.com/problems/maximum-subarray/)
+
+
+给你一个整数数组 `nums` ，请你找出一个具有最大和的连续子数组（子数组最少包含一个元素），返回其最大和。
+
+**子数组** 是数组中的一个连续部分。
+
+**示例 1：**
+
+```
+输入：nums = [-2,1,-3,4,-1,2,1,-5,4]
+输出：6
+解释：连续子数组 [4,-1,2,1] 的和最大，为 6 。
+```
+
+**示例 2：**
+
+```
+输入：nums = [1]
+输出：1
+```
+
+**示例 3：**
+
+```
+输入：nums = [5,4,-1,7,8]
+输出：23
+```
+
+**提示：**
+
+*   1 <= nums.length <= 10<sup>5</sup>
+*   -10<sup>4</sup> <= nums[i] <= 10<sup>4</sup>
+
+**进阶：**如果你已经实现复杂度为 `O(n)` 的解法，尝试使用更为精妙的 **分治法** 求解。
+
+
+#### Solution
+
+```
+class Solution:
+    def maxSubArray(self, nums: List[int]) -> int:
+        pre_sum = 0
+        res = float('-inf')
+        for num in nums:
+            pre_sum = max(pre_sum + num, num)
+            res = max(res, pre_sum)
+        return res
+```
+
+### [64\. 最小路径和](https://leetcode-cn.com/problems/minimum-path-sum/)
+
+
+给定一个包含非负整数的 `_m_ x _n_` 网格 `grid` ，请找出一条从左上角到右下角的路径，使得路径上的数字总和为最小。
+
+**说明：**每次只能向下或者向右移动一步。
+
+**示例 1：**
+
+![](https://tva1.sinaimg.cn/large/e6c9d24egy1h1hpz294ilj206q06qwee.jpg)
+
+```
+输入：grid = [[1,3,1],[1,5,1],[4,2,1]]
+输出：7
+解释：因为路径 1→3→1→1→1 的总和最小。
+```
+
+**示例 2：**
+
+```
+输入：grid = [[1,2,3],[4,5,6]]
+输出：12
+```
+
+**提示：**
+
+*   `m == grid.length`
+*   `n == grid[i].length`
+*   `1 <= m, n <= 200`
+*   `0 <= grid[i][j] <= 100`
+
+
+#### Solution
+
+```python
+
+```
+
+
+
+
+
+## 拆分系列
+
+### [139\. 单词拆分](https://leetcode-cn.com/problems/word-break/)
+
+
+给你一个字符串 `s` 和一个字符串列表 `wordDict` 作为字典。请你判断是否可以利用字典中出现的单词拼接出 `s` 。
+
+**注意：**不要求字典中出现的单词全部都使用，并且字典中的单词可以重复使用。
+
+**示例 1：**
+
+```
+输入: s = "leetcode", wordDict = ["leet", "code"]
+输出: true
+解释: 返回 true 因为 "leetcode" 可以由 "leet" 和 "code" 拼接成。
+```
+
+**示例 2：**
+
+```
+输入: s = "applepenapple", wordDict = ["apple", "pen"]
+输出: true
+解释: 返回 true 因为 "applepenapple" 可以由 "apple" "pen" "apple" 拼接成。
+     注意，你可以重复使用字典中的单词。
+```
+
+**示例 3：**
+
+```
+输入: s = "catsandog", wordDict = ["cats", "dog", "sand", "and", "cat"]
+输出: false
+```
+
+**提示：**
+
+*   `1 <= s.length <= 300`
+*   `1 <= wordDict.length <= 1000`
+*   `1 <= wordDict[i].length <= 20`
+*   `s` 和 `wordDict[i]` 仅有小写英文字母组成
+*   `wordDict` 中的所有字符串 **互不相同**
+
+
+#### Solution
+
+```python
+
+```
+
+### [343\. 整数拆分](https://leetcode-cn.com/problems/integer-break/)
+
+
+给定一个正整数 `n` ，将其拆分为 `k` 个 **正整数** 的和（ `k >= 2` ），并使这些整数的乘积最大化。
+
+返回 _你可以获得的最大乘积_ 。
+
+**示例 1:**
+
+```
+输入: n = 2
+输出: 1
+解释: 2 = 1 + 1, 1 × 1 = 1。
+```
+
+**示例 2:**
+
+```
+输入: n = 10
+输出: 36
+解释: 10 = 3 + 3 + 4, 3 × 3 × 4 = 36。
+```
+
+**提示:**
+
+*   `2 <= n <= 58`
+
+
+#### Solution
+
+```python
+
+```
+
+
+
+## 背包系列
 
 https://leetcode-cn.com/problems/combination-sum-iv/solution/xi-wang-yong-yi-chong-gui-lu-gao-ding-bei-bao-wen-/
 
-## 背包模板
+### 背包模板
+
+### 组合问题
+
+### True、False问题
+
+### 最大最小问题
 
 
 
-# 股票买卖
+## 股票买卖
 
 
 
-# 拆分系列
+## 打家劫舍
 
-单词拆分
 
-整数拆分
 
-# 其他
+## 其他
+
+### [42\. 接雨水](https://leetcode-cn.com/problems/trapping-rain-water/)
+
+
+给定 `n` 个非负整数表示每个宽度为 `1` 的柱子的高度图，计算按此排列的柱子，下雨之后能接多少雨水。
+
+**示例 1：**
+
+![](https://assets.leetcode-cn.com/aliyun-lc-upload/uploads/2018/10/22/rainwatertrap.png)
+
+```
+输入：height = [0,1,0,2,1,0,1,3,2,1,2,1]
+输出：6
+解释：上面是由数组 [0,1,0,2,1,0,1,3,2,1,2,1] 表示的高度图，在这种情况下，可以接 6 个单位的雨水（蓝色部分表示雨水）。 
+```
+
+**示例 2：**
+
+```
+输入：height = [4,2,0,3,2,5]
+输出：9
+```
+
+**提示：**
+
+*   `n == height.length`
+*   1 <= n <= 2 * 10<sup>4</sup>
+*   0 <= height[i] <= 10<sup>5</sup>
+
+https://leetcode-cn.com/submissions/detail/192700961/
+
+https://leetcode-cn.com/problems/trapping-rain-water/solution/jie-yu-shui-by-leetcode-solution-tuvc/
+
+#### Solution1 dp
+
+#### Solution2 单调栈
+
+#### Solution3 双指针
+
+```python
+
+```
+
+### [72\. 编辑距离](https://leetcode-cn.com/problems/edit-distance/)
+
+
+给你两个单词 `word1` 和 `word2`， _请返回将 `word1` 转换成 `word2` 所使用的最少操作数_  。
+
+你可以对一个单词进行如下三种操作：
+
+*   插入一个字符
+*   删除一个字符
+*   替换一个字符
+
+**示例 1：**
+
+```
+输入：word1 = "horse", word2 = "ros"
+输出：3
+解释：
+horse -> rorse (将 'h' 替换为 'r')
+rorse -> rose (删除 'r')
+rose -> ros (删除 'e')
+```
+
+**示例 2：**
+
+```
+输入：word1 = "intention", word2 = "execution"
+输出：5
+解释：
+intention -> inention (删除 't')
+inention -> enention (将 'i' 替换为 'e')
+enention -> exention (将 'n' 替换为 'x')
+exention -> exection (将 'n' 替换为 'c')
+exection -> execution (插入 'u')
+```
+
+**提示：**
+
+*   `0 <= word1.length, word2.length <= 500`
+*   `word1` 和 `word2` 由小写英文字母组成
+
+#### Solution
+
+-   考虑单词A = horse和B = rose的编辑距离
+-   一共六种操作，实际上等价于三种操作
+    -   A插入，B插入，A删除，B删除，A替换，B替换
+    -   A插入等价于B删除，A删除等价于B插入，A替换等价于B替换
+    -   最终等价于三种操作，即A插入，B插入，A替换
+-   考虑hors和ros的最小编辑距离
+    -   可以由hor和ro的最小编辑距离 加上 replace得到，replace = 1 if A[i] != B[j] else 0，即A替换
+    -   可以由hors和ro的最小编辑距离 加上1得到，即B插入's'
+    -   可以由hor和ros的最小编辑距离 加上1得到，即A插入's'
+    -   三者求最小值
+
+```python
+class Solution:
+    def minDistance(self, word1: str, word2: str) -> int:
+        m, n = len(word1), len(word2)
+        if m * n == 0:
+            return max(m, n)
+        
+        dp = [[0] * (n + 1) for _ in range(m + 1)]
+        for i in range(m + 1):
+            dp[i][0] = i
+        for j in range(n + 1):
+            dp[0][j] = j
+        
+        for i in range(1, m + 1):
+            for j in range(1, n + 1):
+                replace = 1
+                if word1[i - 1] == word2[j - 1]:
+                    replace = 0
+                dp[i][j] = min(dp[i - 1][j - 1] + replace, dp[i - 1][j] + 1, dp[i][j - 1] + 1)
+        return dp[-1][-1]
+```
