--- a/_posts/2022-03-02-leetcode_专项突击_二分查找系列.md
+++ b/_posts/2022-03-02-leetcode_专项突击_二分查找系列.md
@@ -12,7 +12,7 @@ tags:
 
 专项突击——二分查找系列
 
-[toc]
+
 
 # 模板
 
@@ -2694,11 +2694,32 @@ k = 1
 **标签**
 `数组` `双指针` `二分查找` `排序` 
 
-
-##
+## solution
 
 ```python
+class Solution:
+    def smallestDistancePair(self, nums: List[int], k: int) -> int:
+        def possible(mid):
+            cnt = 0
+            left = 0
+            for right, num in enumerate(nums):
+                while num - nums[left] > mid:
+                    left += 1
+                cnt += right - left
+            return cnt >= k
 
+        n = len(nums)
+        nums.sort()
+        l, r = 0, nums[-1] - nums[0]
+        # 在最小距离和最大距离之间猜测一个距离D，距离小于等于D的距离数目 大于等于 k
+        
+        while l < r:
+            mid = l + r >> 1
+            if possible(mid):
+                r = mid
+            else:
+                l = mid + 1
+        return r
 ```
 
 >
