--- a/_posts/2022-03-02-leetcode_专项突击_前缀和系列.md
+++ b/_posts/2022-03-02-leetcode_专项突击_前缀和系列.md
@@ -16,6 +16,8 @@ https://leetcode-cn.com/circle/discuss/JK7Dn9/
 
 https://leetcode-cn.com/circle/article/EQWhUd/
 
+https://lucifer.ren/blog/2020/09/27/atMostK/
+
 https://leetcode-cn.com/problems/max-submatrix-lcci/solution/biao-zhun-by-qiang-wei-z-z3c6/
 
 
@@ -367,6 +369,66 @@ class Solution:
             end += 1
         return res if res < float('inf') else 0
 ```
+
+### [862\. 和至少为 K 的最短子数组](https://leetcode-cn.com/problems/shortest-subarray-with-sum-at-least-k/)
+
+
+给你一个整数数组 `nums` 和一个整数 `k` ，找出 `nums` 中和至少为 `k` 的 **最短非空子数组** ，并返回该子数组的长度。如果不存在这样的 **子数组** ，返回 `-1` 。
+
+**子数组** 是数组中 **连续** 的一部分。
+
+**示例 1：**
+
+```
+输入：nums = [1], k = 1
+输出：1
+```
+
+**示例 2：**
+
+```
+输入：nums = [1,2], k = 4
+输出：-1
+```
+
+**示例 3：**
+
+```
+输入：nums = [2,-1,2], k = 3
+输出：3
+```
+
+**提示：**
+
+*   1 <= nums.length <= 10<sup>5</sup>
+*   -10<sup>5</sup> <= nums[i] <= 10<sup>5</sup>
+*   1 <= k <= 10<sup>9</sup>
+
+
+#### Solution 滑动窗口+前缀和的双端单调队列
+
+```python
+class Solution:
+    def shortestSubarray(self, nums: List[int], k: int) -> int:
+        n = len(nums)
+        pre_sum = [0] * (n + 1)
+        for i in range(n):
+            pre_sum[i + 1] = pre_sum[i] + nums[i]
+        
+        res = n + 1
+        queue = collections.deque()
+        for i, pi in enumerate(pre_sum):
+            while queue and pi <= pre_sum[queue[-1]]:
+                queue.pop()
+            # pre_sum[i] - pre_sum[queue[0]]表示queue[0] ~ i - 1直接的子数组的和
+            
+            while queue and pi - k >= pre_sum[queue[0]]:
+                res = min(res, i - queue.popleft())
+            queue.append(i)
+        return res if res < n + 1 else -1
+```
+
+
 
 ### [528\. 按权重随机选择](https://leetcode-cn.com/problems/random-pick-with-weight/)
 
@@ -837,63 +899,5 @@ class Solution:
                         res = max(res, pre_sum - sub_sorted[idx])
                     sub_sorted.add(pre_sum)
         return res
-```
-
-### [862\. 和至少为 K 的最短子数组](https://leetcode-cn.com/problems/shortest-subarray-with-sum-at-least-k/)
-
-
-给你一个整数数组 `nums` 和一个整数 `k` ，找出 `nums` 中和至少为 `k` 的 **最短非空子数组** ，并返回该子数组的长度。如果不存在这样的 **子数组** ，返回 `-1` 。
-
-**子数组** 是数组中 **连续** 的一部分。
-
-**示例 1：**
-
-```
-输入：nums = [1], k = 1
-输出：1
-```
-
-**示例 2：**
-
-```
-输入：nums = [1,2], k = 4
-输出：-1
-```
-
-**示例 3：**
-
-```
-输入：nums = [2,-1,2], k = 3
-输出：3
-```
-
-**提示：**
-
-*   1 <= nums.length <= 10<sup>5</sup>
-*   -10<sup>5</sup> <= nums[i] <= 10<sup>5</sup>
-*   1 <= k <= 10<sup>9</sup>
-
-
-#### Solution
-
-```python
-class Solution:
-    def shortestSubarray(self, nums: List[int], k: int) -> int:
-        n = len(nums)
-        pre_sum = [0] * (n + 1)
-        for i in range(n):
-            pre_sum[i + 1] = pre_sum[i] + nums[i]
-        
-        res = n + 1
-        queue = collections.deque()
-        for i, pi in enumerate(pre_sum):
-            while queue and pi <= pre_sum[queue[-1]]:
-                queue.pop()
-            # pre_sum[i] - pre_sum[queue[0]]表示queue[0] ~ i - 1直接的子数组的和
-            
-            while queue and pi - k >= pre_sum[queue[0]]:
-                res = min(res, i - queue.popleft())
-            queue.append(i)
-        return res if res < n + 1 else -1
 ```
 
