--- a/_posts/2022-03-01-leetcode_模板.md
+++ b/_posts/2022-03-01-leetcode_模板.md
@@ -24,21 +24,53 @@ tags:
 
 链表是否成环，环的入口
 
+
+
 ## 栈和队列
 
 逆波兰表达式
 
+```
+输入：tokens = ["10","6","9","3","+","-11","*","/","*","17","+","5","+"]
+输出：22
+解释：该算式转化为常见的中缀算术表达式为：
+  ((10 * (6 / ((9 + 3) * -11))) + 17) + 5
+= ((10 * (6 / (12 * -11))) + 17) + 5
+= ((10 * (6 / -132)) + 17) + 5
+= ((10 * 0) + 17) + 5
+= (0 + 17) + 5
+= 17 + 5
+= 22
+```
 
+```python
+class Solution:
+    def evalRPN(self, tokens: List[str]) -> int:
+        stack = []
+        for c in tokens:
+            if c not in "+-*/":
+                stack.append(int(c))
+            else:
+                right = stack.pop()
+                left = stack.pop()
+                if c == "*":
+                    stack.append(left * right)
+                elif c == "+":
+                    stack.append(left + right)
+                elif c == "-":
+                    stack.append(left - right)
+                else:
+                    stack.append(int(left / right))
+        return stack[0]
+```
 
 ## 单调栈
 
-https://leetcode-cn.com/problems/largest-rectangle-in-histogram/solution/bao-li-jie-fa-zhan-by-liweiwei1419/
+learning_records/刷题/leetcode/leetcode_tags/单调栈.md
 
 ## 字符串
 
-strStr
-
-
+learninghome3344.github.io/_posts/2022-02-24-leetcode_分组刷题_数据结构.md/2.字符串
 
 ## 二叉树
 
@@ -54,7 +86,7 @@ Z字遍历
 
 ## 二叉搜索树
 
-https://leetcode-cn.com/problems/minimum-absolute-difference-in-bst/solution/zhong-xu-bian-li-tuan-mie-xi-lie-er-cha-sou-suo-sh/
+learninghome3344.github.io/_posts/2022-03-02-leetcode_专项突击_二叉搜索树系列.md
 
 
 
@@ -150,6 +182,8 @@ class Trie:
 
 ### union & find
 
+learninghome3344.github.io/_posts/2022-02-24-leetcode_分组刷题_数据结构.md/6.图/并查集
+
 ```python
 parent = list(range(n))
 def find(i):
@@ -167,7 +201,7 @@ def union(i, j):
 
 ## 二分
 
-https://leetcode-cn.com/problems/search-insert-position/solution/te-bie-hao-yong-de-er-fen-cha-fa-fa-mo-ban-python-/
+learninghome3344.github.io/_posts/2022-03-02-leetcode_专项突击_二分查找系列.md
 
 ##### general
 
@@ -231,7 +265,10 @@ def right_bound(nums, target):
 
 ## 滑动窗口
 
+-   learninghome3344.github.io/_posts/2022-03-02-leetcode_专项突击_滑动窗口系列.md
 
+-   learninghome3344.github.io/_posts/2022-03-02-leetcode_专项突击_前缀和系列.md
+    -   前缀和类题目经常和滑动窗口结合考察
 
 ## 排序算法
 
@@ -336,6 +373,45 @@ def merge_sort(nums):
         k += 1
 ```
 
+#### 逆序对
+
+```python
+class Solution:
+    def reversePairs(self, nums: List[int]) -> int:
+        def merge_sort(nums, tmp, l, r):
+            if l >= r:
+                return 0
+            mid = (l + r) // 2
+            res = merge_sort(nums, tmp, l, mid) + merge_sort(nums, tmp, mid + 1, r)
+
+            i, j, k = l, mid + 1, l
+            while i <= mid and j <= r:
+                if nums[i] <= nums[j]:
+                    tmp[k] = nums[i]
+                    i += 1
+                    res += j - (mid + 1)
+                else:
+                    tmp[k] = nums[j]
+                    j += 1
+                k += 1
+            while i <= mid:
+                tmp[k] = nums[i]
+                res += j - (mid + 1)
+                i += 1
+                k += 1
+            while j <= r:
+                tmp[k] = nums[j]
+                j += 1
+                k += 1
+            nums[l: r + 1] = tmp[l: r + 1]
+            return res
+        
+        n = len(nums)
+        res = merge_sort(nums, nums[:], 0, n - 1)
+        return res
+
+```
+
 
 
 ### 堆排序
@@ -375,13 +451,13 @@ def heap_sort(nums):
 
 ## 拓扑排序
 
+learninghome3344.github.io/_posts/2022-02-24-leetcode_分组刷题_数据结构.md/6.图/拓扑排序
+
 
 
 ## DFS
 
-https://leetcode-cn.com/problems/subsets/solution/c-zong-jie-liao-hui-su-wen-ti-lei-xing-dai-ni-gao-/
 
-https://leetcode-cn.com/problems/zi-fu-chuan-de-pai-lie-lcof/solution/c-zong-jie-liao-hui-su-wen-ti-lei-xing-dai-ni-ga-4/
 
 ## BFS
 
@@ -401,6 +477,19 @@ https://leetcode-cn.com/problems/zi-fu-chuan-de-pai-lie-lcof/solution/c-zong-jie
 
 ## 最短路径算法
 
+## dijkstra
+
+```python
+```
+
+
+
+## 练习
+
+1293
+
+1631
+
 
 
 ## 最小生成树算法
@@ -413,13 +502,7 @@ https://leetcode-cn.com/problems/zi-fu-chuan-de-pai-lie-lcof/solution/c-zong-jie
 
 ## 前缀和专项
 
-https://leetcode-cn.com/circle/discuss/JK7Dn9/
-
-https://leetcode-cn.com/circle/article/EQWhUd/
-
-https://lucifer.ren/blog/2020/09/27/atMostK/
-
-
+learninghome3344.github.io/_posts/2022-03-02-leetcode_专项突击_前缀和系列.md
 
 
 
@@ -429,15 +512,9 @@ https://lucifer.ren/blog/2020/09/27/atMostK/
 
 ## 整数专项
 
-7.整数反转
+learninghome3344.github.io/_posts/2022-03-02-leetcode_专项突击_整数系列.md
 
-8.字符串转换整数
+## 实现数据结构专项(包含LFU&LRU)
 
-9.回文数
-
-## 实现数据结构专项
-
-
-
-## LRU&LFU专项
+learninghome3344.github.io/_posts/2022-03-02-leetcode_专项突击_实现数据结构系列.md
 
