--- a/_posts/2022-03-01-leetcode_模板.md
+++ b/_posts/2022-03-01-leetcode_模板.md
@@ -9,74 +9,74 @@ catalog: true
 tags:
     - DSA与刷题/leetcode
 
-
 ---
 
 模板
 
 # 各专题题目整理
 
--   二分
-    -   [704. 二分查找](https://leetcode.cn/problems/binary-search/)
-    -   [4. 寻找两个正序数组的中位数](https://leetcode.cn/problems/median-of-two-sorted-arrays/)
-    -   [278. 第一个错误的版本](https://leetcode.cn/problems/first-bad-version/)
-    -   [剑指 Offer 51. 数组中的逆序对](https://leetcode.cn/problems/shu-zu-zhong-de-ni-xu-dui-lcof/)
-    -   [300. 最长递增子序列](https://leetcode.cn/problems/longest-increasing-subsequence/)
-    -   [33. 搜索旋转排序数组](https://leetcode.cn/problems/search-in-rotated-sorted-array/)
-    -   [81. 搜索旋转排序数组 II](https://leetcode.cn/problems/search-in-rotated-sorted-array-ii/)
-    -   [35. 搜索插入位置](https://leetcode.cn/problems/search-insert-position/)
-    -   [34. 在排序数组中查找元素的第一个和最后一个位置](https://leetcode.cn/problems/find-first-and-last-position-of-element-in-sorted-array/)
-    -   [153. 寻找旋转排序数组中的最小值](https://leetcode.cn/problems/find-minimum-in-rotated-sorted-array/)
-    -   [154. 寻找旋转排序数组中的最小值 II](https://leetcode.cn/problems/find-minimum-in-rotated-sorted-array-ii/)
-    -   [475. 供暖器](https://leetcode.cn/problems/heaters/)
--   滑动窗口
-    -   [76. 最小覆盖子串](https://leetcode.cn/problems/minimum-window-substring/)
-    -   [567. 字符串的排列](https://leetcode.cn/problems/permutation-in-string/)
-    -   [239. 滑动窗口最大值](https://leetcode.cn/problems/sliding-window-maximum/)
-    -   [438. 找到字符串中所有字母异位词](https://leetcode.cn/problems/find-all-anagrams-in-a-string/)
-    -   [3. 无重复字符的最长子串](https://leetcode.cn/problems/longest-substring-without-repeating-characters/)
--   单调栈
-    -   [496. 下一个更大元素 I](https://leetcode.cn/problems/next-greater-element-i/)
-    -   [739. 每日温度](https://leetcode.cn/problems/daily-temperatures/)
-    -   [503. 下一个更大元素 II](https://leetcode.cn/problems/next-greater-element-ii/)
-    -   [42. 接雨水](https://leetcode.cn/problems/trapping-rain-water/)
-    -   [84. 柱状图中最大的矩形](https://leetcode.cn/problems/largest-rectangle-in-histogram/)
-    -   [901. 股票价格跨度](https://leetcode.cn/problems/online-stock-span/)
--   前缀和
-    -   [1480. 一维数组的动态和](https://leetcode.cn/problems/running-sum-of-1d-array/)
-    -   [303. 区域和检索 - 数组不可变](https://leetcode.cn/problems/range-sum-query-immutable/)
-    -   [643. 子数组最大平均数 I](https://leetcode.cn/problems/maximum-average-subarray-i/)
-    -   [560. 和为 K 的子数组](https://leetcode.cn/problems/subarray-sum-equals-k/)
-    -   [974. 和可被 K 整除的子数组](https://leetcode.cn/problems/subarray-sums-divisible-by-k/)
-    -   [209. 长度最小的子数组](https://leetcode.cn/problems/minimum-size-subarray-sum/)
-    -   [862. 和至少为 K 的最短子数组](https://leetcode.cn/problems/shortest-subarray-with-sum-at-least-k/)
-    -   [528. 按权重随机选择](https://leetcode.cn/problems/random-pick-with-weight/)
-    -   [238. 除自身以外数组的乘积](https://leetcode.cn/problems/product-of-array-except-self/)
-    -   [304. 二维区域和检索 - 矩阵不可变](https://leetcode.cn/problems/range-sum-query-2d-immutable/)
-    -   [1314. 矩阵区域和](https://leetcode.cn/problems/matrix-block-sum/)
-    -   [面试题 17.24. 最大子矩阵](https://leetcode.cn/problems/max-submatrix-lcci/)
-    -   [1074. 元素和为目标值的子矩阵数量](https://leetcode.cn/problems/number-of-submatrices-that-sum-to-target/)
-    -   [363. 矩形区域不超过 K 的最大数值和](https://leetcode.cn/problems/max-sum-of-rectangle-no-larger-than-k/)
--   动态规划
-    -   线性dp
-        -   单串
-            -   LIS系列
-                -   [300. 最长递增子序列](https://leetcode.cn/problems/longest-increasing-subsequence/)
-                -   [673. 最长递增子序列的个数](https://leetcode.cn/problems/number-of-longest-increasing-subsequence/)
-                -   [354. 俄罗斯套娃信封问题](https://leetcode.cn/problems/russian-doll-envelopes/)
-            -   最大子数组和系列
-                -   [53. 最大子数组和](https://leetcode.cn/problems/maximum-subarray/)
-                -   [152. 乘积最大子数组](https://leetcode.cn/problems/maximum-product-subarray/)
-                -   [918. 环形子数组的最大和](https://leetcode.cn/problems/maximum-sum-circular-subarray/)
-                -   [面试题 17.24. 最大子矩阵](https://leetcode.cn/problems/max-submatrix-lcci/)
-                -   
-            -   
-        -   带维度单串
-            -   
-        -   双串
-        -   矩阵
-    -   前缀和+dp
-    -   区间dp
+- 二分
+  - [704. 二分查找](https://leetcode.cn/problems/binary-search/)
+  - [4. 寻找两个正序数组的中位数](https://leetcode.cn/problems/median-of-two-sorted-arrays/)
+  - [278. 第一个错误的版本](https://leetcode.cn/problems/first-bad-version/)
+  - [剑指 Offer 51. 数组中的逆序对](https://leetcode.cn/problems/shu-zu-zhong-de-ni-xu-dui-lcof/)
+  - [300. 最长递增子序列](https://leetcode.cn/problems/longest-increasing-subsequence/)
+  - [33. 搜索旋转排序数组](https://leetcode.cn/problems/search-in-rotated-sorted-array/)
+  - [81. 搜索旋转排序数组 II](https://leetcode.cn/problems/search-in-rotated-sorted-array-ii/)
+  - [35. 搜索插入位置](https://leetcode.cn/problems/search-insert-position/)
+  - [34. 在排序数组中查找元素的第一个和最后一个位置](https://leetcode.cn/problems/find-first-and-last-position-of-element-in-sorted-array/)
+  - [153. 寻找旋转排序数组中的最小值](https://leetcode.cn/problems/find-minimum-in-rotated-sorted-array/)
+  - [154. 寻找旋转排序数组中的最小值 II](https://leetcode.cn/problems/find-minimum-in-rotated-sorted-array-ii/)
+  - [475. 供暖器](https://leetcode.cn/problems/heaters/)
+- 滑动窗口
+  - [76. 最小覆盖子串](https://leetcode.cn/problems/minimum-window-substring/)
+  - [567. 字符串的排列](https://leetcode.cn/problems/permutation-in-string/)
+  - [239. 滑动窗口最大值](https://leetcode.cn/problems/sliding-window-maximum/)
+  - [438. 找到字符串中所有字母异位词](https://leetcode.cn/problems/find-all-anagrams-in-a-string/)
+  - [3. 无重复字符的最长子串](https://leetcode.cn/problems/longest-substring-without-repeating-characters/)
+- 单调栈
+  - [496. 下一个更大元素 I](https://leetcode.cn/problems/next-greater-element-i/)
+  - [739. 每日温度](https://leetcode.cn/problems/daily-temperatures/)
+  - [503. 下一个更大元素 II](https://leetcode.cn/problems/next-greater-element-ii/)
+  - [42. 接雨水](https://leetcode.cn/problems/trapping-rain-water/)
+  - [84. 柱状图中最大的矩形](https://leetcode.cn/problems/largest-rectangle-in-histogram/)
+  - [85. 最大矩形](https://leetcode.cn/problems/maximal-rectangle/)
+  - [901. 股票价格跨度](https://leetcode.cn/problems/online-stock-span/)
+- 前缀和
+  - [1480. 一维数组的动态和](https://leetcode.cn/problems/running-sum-of-1d-array/)
+  - [303. 区域和检索 - 数组不可变](https://leetcode.cn/problems/range-sum-query-immutable/)
+  - [643. 子数组最大平均数 I](https://leetcode.cn/problems/maximum-average-subarray-i/)
+  - [560. 和为 K 的子数组](https://leetcode.cn/problems/subarray-sum-equals-k/)
+  - [974. 和可被 K 整除的子数组](https://leetcode.cn/problems/subarray-sums-divisible-by-k/)
+  - [209. 长度最小的子数组](https://leetcode.cn/problems/minimum-size-subarray-sum/)
+  - [862. 和至少为 K 的最短子数组](https://leetcode.cn/problems/shortest-subarray-with-sum-at-least-k/)
+  - [528. 按权重随机选择](https://leetcode.cn/problems/random-pick-with-weight/)
+  - [238. 除自身以外数组的乘积](https://leetcode.cn/problems/product-of-array-except-self/)
+  - [304. 二维区域和检索 - 矩阵不可变](https://leetcode.cn/problems/range-sum-query-2d-immutable/)
+  - [1314. 矩阵区域和](https://leetcode.cn/problems/matrix-block-sum/)
+  - [面试题 17.24. 最大子矩阵](https://leetcode.cn/problems/max-submatrix-lcci/)
+  - [1074. 元素和为目标值的子矩阵数量](https://leetcode.cn/problems/number-of-submatrices-that-sum-to-target/)
+  - [363. 矩形区域不超过 K 的最大数值和](https://leetcode.cn/problems/max-sum-of-rectangle-no-larger-than-k/)
+- 动态规划
+  - 线性dp
+    - 单串
+      - LIS系列
+        - [300. 最长递增子序列](https://leetcode.cn/problems/longest-increasing-subsequence/)
+        - [673. 最长递增子序列的个数](https://leetcode.cn/problems/number-of-longest-increasing-subsequence/)
+        - [354. 俄罗斯套娃信封问题](https://leetcode.cn/problems/russian-doll-envelopes/)
+      - 最大子数组和系列
+        - [53. 最大子数组和](https://leetcode.cn/problems/maximum-subarray/)
+        - [152. 乘积最大子数组](https://leetcode.cn/problems/maximum-product-subarray/)
+        - [918. 环形子数组的最大和](https://leetcode.cn/problems/maximum-sum-circular-subarray/)
+        - [面试题 17.24. 最大子矩阵](https://leetcode.cn/problems/max-submatrix-lcci/)
+        - [363. 矩形区域不超过 K 的最大数值和](https://leetcode.cn/problems/max-sum-of-rectangle-no-larger-than-k/)
+      - 打家劫舍系列
+        -
+    - 带维度单串
+    - 双串
+    - 矩阵
+  - 前缀和+dp
+  - 区间dp
 
 # 数据结构
 
@@ -87,8 +87,6 @@ tags:
 合并k个排序链表
 
 链表是否成环，环的入口
-
-
 
 ## 栈和队列
 
@@ -151,8 +149,6 @@ Z字遍历
 ## 二叉搜索树
 
 learninghome3344.github.io/_posts/2022-03-02-leetcode_专项突击_二叉搜索树系列.md
-
-
 
 ## 前缀树
 
@@ -236,11 +232,7 @@ class Trie:
         return True
 ```
 
-
-
 ## 线段树
-
-
 
 ## 并查集
 
@@ -258,8 +250,6 @@ def find(i):
 def union(i, j):
     parent[find(i)] = find(j)
 ```
-
-
 
 # 算法
 
@@ -325,14 +315,13 @@ def right_bound(nums, target):
     return ans
 ```
 
-
-
 ## 滑动窗口
 
--   learninghome3344.github.io/_posts/2022-03-02-leetcode_专项突击_滑动窗口系列.md
+- learninghome3344.github.io/_posts/2022-03-02-leetcode_专项突击_滑动窗口系列.md
 
--   learninghome3344.github.io/_posts/2022-03-02-leetcode_专项突击_前缀和系列.md
-    -   前缀和类题目经常和滑动窗口结合考察
+- learninghome3344.github.io/_posts/2022-03-02-leetcode_专项突击_前缀和系列.md
+  
+  - 前缀和类题目经常和滑动窗口结合考察
 
 ## 排序算法
 
@@ -366,7 +355,7 @@ class ListNode(object):
     def __init__(self, x):
         self.val = x
         self.next = None
-        
+
 # 大于left->val放到右边，小于left->val放到左边
 def partition(left, right):
     pv = left.val
@@ -384,7 +373,7 @@ def quick_sort(left, right):
         mid = partition(left, right)
         quick_sort(left, mid)
         quick_sort(mid.next, right)
-        
+
 def create(items):
     head = ListNode(items[0])
     p = head
@@ -397,13 +386,11 @@ def print_nodes(head):
     while head:
         print(head.val, end=' ')
         head = head.next
-    
+
 head = create([4,2,5,3,7,9,0,1])
 quick_sort(head, None)
 print_nodes(head)
 ```
-
-
 
 ### 归并排序
 
@@ -466,22 +453,20 @@ class Solution:
                 k += 1
             nums[l: r + 1] = tmp[l: r + 1]
             return cnt
-        
+
         cnt = merge_sort(nums, nums[:], 0, len(nums) - 1)
         return cnt
 ```
 
-
-
 ### 堆排序
 
--   https://www.cnblogs.com/chengxiao/p/6129630.html
--   构造初始大顶堆，从第一个非叶子节点到根节点，将每个节点都调整为左右子节点中最大的
--   每次对未排序的部分构造最大堆，然后交换最大堆的顶点和最后一个数
--   heapify过程
-    -   index对应的节点一定比左右节点大，但是需要对调整后的new_index节点进行heapify，使这个节点也满足大顶堆性质
-    -   调整大顶堆从下往上，从左往右调整。
-    -   例如，4,6,8,5,9->4,9,8,5,6；顶点9本身满足比左右子节点大，但是右节点交换过了，需要对这个交换过的子节点heapify
+- https://www.cnblogs.com/chengxiao/p/6129630.html
+- 构造初始大顶堆，从第一个非叶子节点到根节点，将每个节点都调整为左右子节点中最大的
+- 每次对未排序的部分构造最大堆，然后交换最大堆的顶点和最后一个数
+- heapify过程
+  - index对应的节点一定比左右节点大，但是需要对调整后的new_index节点进行heapify，使这个节点也满足大顶堆性质
+  - 调整大顶堆从下往上，从左往右调整。
+  - 例如，4,6,8,5,9->4,9,8,5,6；顶点9本身满足比左右子节点大，但是右节点交换过了，需要对这个交换过的子节点heapify
 
 ```python
 def heapify(nums, index, heap_size):
@@ -495,7 +480,7 @@ def heapify(nums, index, heap_size):
     if new_index != index:
         nums[index], nums[new_index] = nums[new_index], nums[index]
         heapify(nums, new_index, heap_size)
-    
+
 
 def heap_sort(nums):
     n = len(nums)
@@ -506,21 +491,13 @@ def heap_sort(nums):
         heapify(nums, 0, i)
 ```
 
-
-
 ## 拓扑排序
 
 learninghome3344.github.io/_posts/2022-02-24-leetcode_分组刷题_数据结构.md/6.图/拓扑排序
 
-
-
 ## DFS
 
-
-
 ## BFS
-
-
 
 ## 动态规划
 
@@ -530,32 +507,21 @@ learninghome3344.github.io/_posts/2022-02-24-leetcode_分组刷题_数据结构.
 
 ### 其他
 
-
-
-
-
 ## 最短路径算法
 
-## dijkstra
+### dijkstra
 
 ```python
+
 ```
 
-
-
-## 练习
+### 练习
 
 1293
 
 1631
 
-
-
 ## 最小生成树算法
-
-
-
-
 
 # 专项
 
@@ -563,11 +529,7 @@ learninghome3344.github.io/_posts/2022-02-24-leetcode_分组刷题_数据结构.
 
 learninghome3344.github.io/_posts/2022-03-02-leetcode_专项突击_前缀和系列.md
 
-
-
 ## 矩阵专项
-
-
 
 ## 整数专项
 
@@ -576,4 +538,3 @@ learninghome3344.github.io/_posts/2022-03-02-leetcode_专项突击_整数系列.
 ## 实现数据结构专项(包含LFU&LRU)
 
 learninghome3344.github.io/_posts/2022-03-02-leetcode_专项突击_实现数据结构系列.md
-
